--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
+    "motion": "^12.5.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.5",
     "octokit": "^4.1.2",
