--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "@trpc/server": "^11.0.0-rc.446",
     "@uiw/react-md-editor": "^4.0.5",
     "ai": "^4.1.58",
+    "assemblyai": "^4.9.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.4.0",
     "geist": "^1.3.0",
     "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
@@ -76,8 +78,10 @@
     "next-themes": "^0.4.5",
     "octokit": "^4.1.2",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
